--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   devpisrv:
     build: .
     ports:
-      - "3141:3141"
+      - "${SERVER_IP:-0.0.0.0}:${SERVER_PORT:-3141}:3141"
     volumes:
       - devpisrv-data:/var/local/devpisrv
     restart: always
